return report to old structure due refactoring need

--- a/server/report/pom.xml
+++ b/server/report/pom.xml
@@ -12,16 +12,9 @@
 
   <groupId>com.mg.server</groupId>
   <artifactId>report</artifactId>
-  <packaging>pom</packaging>
 
   <name>MBSA::Server::Report</name>
   <description/>
-
-  <modules>
-    <module>ui</module>
-    <module>ejb</module>
-
-  </modules>
 
   <dependencies>
     <dependency>
@@ -30,44 +23,36 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate</artifactId>
+      <groupId>com.ibm.icu</groupId>
+      <artifactId>icu4j</artifactId>
       <scope>provided</scope>
     </dependency>
+
     <dependency>
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
       <scope>provided</scope>
     </dependency>
+
     <dependency>
-      <groupId>com.ibm.icu</groupId>
-      <artifactId>icu4j</artifactId>
+      <groupId>org.eclipse.birt.core</groupId>
+      <artifactId>api</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.birt.report.engine</groupId>
+      <artifactId>api</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.birt.report.model</groupId>
+      <artifactId>api</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.datatools.connectivity</groupId>
+      <artifactId>oda</artifactId>
       <scope>provided</scope>
     </dependency>
   </dependencies>
-
-  <!--<dependencies>
-    <dependency>
-      <groupId>com.mg.modules</groupId>
-      <artifactId>framework</artifactId>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.mg.modules</groupId>
-      <artifactId>core</artifactId>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.mg.modules</groupId>
-      <artifactId>baiengine</artifactId>
-      <scope>provided</scope>
-    </dependency>
-
-
-
-
-
-
-
-  </dependencies>-->
 </project>
