--- a/server/report/report/pom.xml
+++ b/server/report/report/pom.xml
@@ -17,7 +17,7 @@
   <description/>
 
   <build>
-    <finalName>030mreport-ejb</finalName>
+    <finalName>030mreport-full</finalName>
 
     <plugins>
       <plugin>
@@ -55,9 +55,6 @@
             </goals>
             <configuration>
               <classifier>ejb</classifier>
-              <excludes>
-                <exclude>**/ui/**</exclude>
-              </excludes>
             </configuration>
           </execution>
         </executions>
